--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,13 +6,13 @@
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 10px
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 2em #646cff67);
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
