--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,8 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
   text-align: center;
 }
 
@@ -9,7 +10,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  margin: 10px
+  z-index: 10;
+
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cff67);
