--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -23,4 +23,18 @@
 .text {
     color: rgb(49, 51, 56);
     font-weight: bold;
+    margin-bottom: 5px;
+}
+.input-field {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #7e7b7b;
+    border-radius: 5px;
+    font-size: 14px;
+}
+.input-group {
+    display: flex;
+    flex-direction: column; /* Stack label and input vertically */
+    align-items: start; /* Align items to the left */
+    margin-bottom: 5px; /* Space between input fields */
 }
